# homework_24.1

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: asgi.py  settings.py  urls.py
lessonsapp/: apps.py  models.py  permissons.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
lessonsapp/migrations/: 0001_initial.py  0002_course_lessons.py  0003_remove_course_lessons_course_lessons.py  0004_course_owner_course_lesson_owner_lesson.py  0005_subscription.py  0006_alter_lesson_video_alter_subscription_course.py  0007_alter_course_description.py  0008_course_price.py  0009_lesson_price_alter_course_price.py
paymentsapp/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
paymentsapp/migrations/: 0001_initial.py  0002_payment_status_paid_payment_stripe_session_and_more.py
usersapp/: models.py  serializers.py  urls.py  views.py
usersapp/migrations/: 0001_initial.py
